testsuite/poke.pkl/array-siz-diag-3.pk
/* { dg-do compile } */

type foo = struct { uint<3>[1#B] i; /* { dg-error "do not fit" } */
};
